--- a/src/pc.rc
+++ b/src/pc.rc
@@ -57,13 +57,13 @@ BEGIN
         END
 END
 
-ConfigureDlg DIALOGEX 0, 0, 232+40, 372
+ConfigureDlg DIALOGEX 0, 0, 232+40, 392
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure PCem"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,64,348,50,14, WS_TABSTOP
-    PUSHBUTTON      "Cancel",IDCANCEL,128,348,50,14, WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,64,368,50,14, WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDCANCEL,128,368,50,14, WS_TABSTOP
     COMBOBOX        IDC_COMBO1,62,16,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Configure", IDC_CONFIGUREMOD, 224, 16, 40, 14, WS_TABSTOP
     COMBOBOX        IDC_COMBOVID,62,36,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
@@ -78,12 +78,12 @@ BEGIN
     EDITTEXT        IDC_MEMTEXT, 62, 172, 36, 14, ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "", IDC_MEMSPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_NOTHOUSANDS | UDS_SETBUDDYINT, 98, 172, 12, 14
     LTEXT           "MB", IDC_TEXT_MB, 98, 172, 40, 10
-    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,272,118,10
-    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,288,118,10    
-    CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,304,118,10
-    CONTROL         "Synchronise time to host clock",IDC_CHECKSYNC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,320,118,10
-    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,336,118,10
-    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 336, 40, 14, WS_TABSTOP
+    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,292,118,10
+    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,308,118,10    
+    CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,324,118,10
+    CONTROL         "Synchronise time to host clock",IDC_CHECKSYNC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,340,118,10
+    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,356,118,10
+    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 356, 40, 14, WS_TABSTOP
     LTEXT           "Machine :",IDC_STATIC,15,16,40,10
     LTEXT           "Video :",IDC_STATIC,15,36,34,10
     LTEXT           "CPU type :",IDC_STATIC,15,56,34,10
@@ -96,12 +96,14 @@ BEGIN
     LTEXT           "Drive B: :",IDC_STATIC,15,216,40,10
     COMBOBOX        IDC_COMBODRA,62,196,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBODRB,62,216,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Joystick :",IDC_STATIC,15,236,40,10
-    COMBOBOX        IDC_COMBOJOY,62,236,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Joystick 1...",IDC_JOY1,16,252,50,14, WS_TABSTOP
-    PUSHBUTTON      "Joystick 2...",IDC_JOY2,80,252,50,14, WS_TABSTOP
-    DEFPUSHBUTTON   "Joystick 3...",IDC_JOY3,144,252,50,14, WS_TABSTOP
-    PUSHBUTTON      "Joystick 4...",IDC_JOY4,208,252,50,14, WS_TABSTOP
+    LTEXT           "Mouse :",IDC_STATIC,15,236,40,10
+    COMBOBOX        IDC_COMBOMOUSE,62,236,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Joystick :",IDC_STATIC,15,256,40,10
+    COMBOBOX        IDC_COMBOJOY,62,256,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "Joystick 1...",IDC_JOY1,16,272,50,14, WS_TABSTOP
+    PUSHBUTTON      "Joystick 2...",IDC_JOY2,80,272,50,14, WS_TABSTOP
+    DEFPUSHBUTTON   "Joystick 3...",IDC_JOY3,144,272,50,14, WS_TABSTOP
+    PUSHBUTTON      "Joystick 4...",IDC_JOY4,208,272,50,14, WS_TABSTOP
 END
 
 HdConfDlg DIALOGEX 0, 0, 210, 312+4*16
