--- a/src/pc.rc
+++ b/src/pc.rc
@@ -57,13 +57,13 @@ BEGIN
         END
 END
 
-ConfigureDlg DIALOGEX 0, 0, 232+40, 392
+ConfigureDlg DIALOGEX 0, 0, 292, 412
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure PCem"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,64,368,50,14, WS_TABSTOP
-    PUSHBUTTON      "Cancel",IDCANCEL,128,368,50,14, WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,64,388,50,14, WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDCANCEL,128,388,50,14, WS_TABSTOP
     COMBOBOX        IDC_COMBO1,62,16,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Configure", IDC_CONFIGUREMOD, 224, 16, 40, 14, WS_TABSTOP
     COMBOBOX        IDC_COMBOVID,62,36,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
@@ -78,12 +78,12 @@ BEGIN
     EDITTEXT        IDC_MEMTEXT, 62, 172, 36, 14, ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "", IDC_MEMSPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_NOTHOUSANDS | UDS_SETBUDDYINT, 98, 172, 12, 14
     LTEXT           "MB", IDC_TEXT_MB, 98, 172, 40, 10
-    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,292,118,10
-    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,308,118,10    
-    CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,324,118,10
-    CONTROL         "Synchronise time to host clock",IDC_CHECKSYNC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,340,118,10
-    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,356,118,10
-    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 356, 40, 14, WS_TABSTOP
+    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,312,118,10
+    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,328,118,10    
+    CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,344,118,10
+    CONTROL         "Synchronise time to host clock",IDC_CHECKSYNC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,360,118,10
+    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,376,118,10
+    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 376, 40, 14, WS_TABSTOP
     LTEXT           "Machine :",IDC_STATIC,15,16,40,10
     LTEXT           "Video :",IDC_STATIC,15,36,34,10
     LTEXT           "CPU type :",IDC_STATIC,15,56,34,10
@@ -92,18 +92,20 @@ BEGIN
     LTEXT           "Video speed :",IDC_STATIC,15,136,40,10    
     LTEXT           "Soundcard :",IDC_STATIC,15,156,40,10
     LTEXT           "Memory :",IDC_STATIC,15,176,40,10
-    LTEXT           "Drive A: :",IDC_STATIC,15,196,40,10
-    LTEXT           "Drive B: :",IDC_STATIC,15,216,40,10
-    COMBOBOX        IDC_COMBODRA,62,196,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBODRB,62,216,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Mouse :",IDC_STATIC,15,236,40,10
-    COMBOBOX        IDC_COMBOMOUSE,62,236,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Joystick :",IDC_STATIC,15,256,40,10
-    COMBOBOX        IDC_COMBOJOY,62,256,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Joystick 1...",IDC_JOY1,16,272,50,14, WS_TABSTOP
-    PUSHBUTTON      "Joystick 2...",IDC_JOY2,80,272,50,14, WS_TABSTOP
-    DEFPUSHBUTTON   "Joystick 3...",IDC_JOY3,144,272,50,14, WS_TABSTOP
-    PUSHBUTTON      "Joystick 4...",IDC_JOY4,208,272,50,14, WS_TABSTOP
+    LTEXT           "HDD :",IDC_STATIC,15,196,40,10    
+    COMBOBOX        IDC_COMBOHDD, 62,196,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Drive A: :",IDC_STATIC,15,216,40,10
+    LTEXT           "Drive B: :",IDC_STATIC,15,236,40,10
+    COMBOBOX        IDC_COMBODRA,62,216,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBODRB,62,236,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Mouse :",IDC_STATIC,15,256,40,10
+    COMBOBOX        IDC_COMBOMOUSE,62,256,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Joystick :",IDC_STATIC,15,276,40,10
+    COMBOBOX        IDC_COMBOJOY,62,276,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "Joystick 1...",IDC_JOY1,16,292,50,14, WS_TABSTOP
+    PUSHBUTTON      "Joystick 2...",IDC_JOY2,80,292,50,14, WS_TABSTOP
+    DEFPUSHBUTTON   "Joystick 3...",IDC_JOY3,144,292,50,14, WS_TABSTOP
+    PUSHBUTTON      "Joystick 4...",IDC_JOY4,208,292,50,14, WS_TABSTOP
 END
 
 HdConfDlg DIALOGEX 0, 0, 210, 312+4*16
@@ -226,4 +228,86 @@ FONT 8, "MS Sans Serif"
 BEGIN
     LTEXT           "1",IDC_STEXT_DEVICE,16,16,180,1000
     LTEXT           "1",IDC_STEXT1,16,186,180,1000
+END
+
+HdConfDlgMfm DIALOGEX 0, 0, 210, 172
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Configure Hard Discs"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,31+12,152,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,101+12,152,50,14
+    
+    LTEXT           "C:",IDC_STATIC,7,6,27,10
+    EDITTEXT        IDC_EDIT_C_FN, 7, 22, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_CFILE,7 + 136,      22, 16, 14
+    PUSHBUTTON      "New",IDC_CNEW,7 + 136 + 16, 22, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTC, 7 + 136 + 16 + 24, 22, 24, 14
+        
+    EDITTEXT        IDC_EDIT_C_SPT,36,38,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_HPC,94,38,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_CYL,152,38,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,38,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,38,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,38,32,12
+    LTEXT           "", IDC_TEXT_C_SIZE, 7, 54, 136, 12
+    
+    LTEXT           "D:",IDC_STATIC,7,76,27,10
+    EDITTEXT        IDC_EDIT_D_FN, 7, 92, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_DFILE,7 + 136,     92, 16, 14
+    PUSHBUTTON      "New",IDC_DNEW,7 + 136 + 16, 92, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTD, 7 + 136 + 16 + 24, 92, 24, 14
+    
+    EDITTEXT        IDC_EDIT_D_SPT,36,108,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_HPC,94,108,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_CYL,152,108,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,108,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,108,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,108,32,12
+    LTEXT           "", IDC_TEXT_D_SIZE, 7, 124, 136, 12    
+END
+
+HdNewDlgMfm DIALOGEX 0, 0, 186, 102
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "New Hard Disc"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,31,82,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,101,82,50,14
+    
+    EDITTEXT        IDC_EDITC, 7, 6, 136, 12
+    PUSHBUTTON      "...",IDC_CFILE,7 + 136,      6, 16, 14
+    
+    EDITTEXT        IDC_EDIT1,36,22,16,12
+    EDITTEXT        IDC_EDIT2,94,22,16,12
+    EDITTEXT        IDC_EDIT3,152,22,28,12
+    LTEXT           "Sectors:",IDC_STATIC,7,22,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,22,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,22,32,12
+    LTEXT           "", IDC_TEXT1, 7, 38, 136, 12
+
+    COMBOBOX        IDC_HDTYPE, 7,54,172,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+
+END
+
+HdSizeDlgMfm DIALOGEX 0, 0, 186, 102
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Hard disc parameters"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,31,82,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,101,82,50,14
+    
+    LTEXT           "Initial settings are based on file size",IDC_STATIC,7,6,170,10
+    
+    EDITTEXT        IDC_EDIT1,36,22,16,12
+    EDITTEXT        IDC_EDIT2,94,22,16,12
+    EDITTEXT        IDC_EDIT3,152,22,28,12
+    LTEXT           "Sectors:",IDC_STATIC,7,22,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,22,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,22,32,12
+    LTEXT           "", IDC_TEXT1, 7, 38, 136, 12
+
+    COMBOBOX        IDC_HDTYPE, 7,54,172,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+
 END
